--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "slimes_enviro",
   "version": "1.0.0",
   "description": "new project",
   "main": "server.js",
@@ -11,6 +11,15 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "forever": "^4.0.3",
     "mysql": "^2.18.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/virasakd/340_project.git"
+  },
+  "bugs": {
+    "url": "https://github.com/virasakd/340_project/issues"
+  },
+  "homepage": "https://github.com/virasakd/340_project#readme"
 }
